add upspeak API argument for cancellable synthesis
